Responsive integration of videos

--- a/video-embed-privacy.css
+++ b/video-embed-privacy.css
@@ -38,3 +38,23 @@
 .video-wrapped .video-wrapped-play .small {
 	font-size: 50%;
 }
+
+/* Responsive Videos */
+.video-wrapped {
+	position: relative;
+	padding-bottom: 56.25%;
+	padding-top: 30px;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.video-wrapped iframe,
+.video-wrapped object,
+.video-wrapped embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
