--- a/video-embed-privacy.css
+++ b/video-embed-privacy.css
@@ -4,35 +4,71 @@
 	color: white;
 	overflow: hidden;
 	position: relative;
+	cursor: pointer;
+	max-width: 100%;
+	margin: auto;
 }
+.video-wrapped-clicked {
+	background: transparent;
+}
+
 .video-wrapped .video-wrapped-nojs {
 	padding: 20px;
+	cursor: auto;
 }
 
 .video-wrapped .video-wrapped-play {
 	text-align: center;
 	font-size: 30px;
 	padding-top: 20px;
-	position: absolute;
+	position: relative;
 	left: 0;
 	right: 0;
-	top: 50%;
+	margin-top: 30%;
 	cursor: pointer;
 	text-shadow: 1px 1px 3px black;
 }
 
-.video-wrapped .video-wrapped-play:before {
+.video-wrapped .video-wrapped-play span {
+	background: rgba(0, 0, 0, .3);
+	box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+}
+
+
+.video-wrapped.video-wrapped-video .video-wrapped-play:before {
+	content: '';
+	position: absolute;
+	width: 80px;
+	height: 50px;
+	margin-left: -40px;
+	left: 50%;
+	top: -35px;
+	background: black;
+	border-radius: 5px;
+}
+.video-wrapped.video-wrapped-video:hover .video-wrapped-play:before {
+	box-shadow: 0 0 5px rgba(0, 0, 0, .3);
+}
+
+.video-wrapped.video-wrapped-yt .video-wrapped-play:before {
+	background: rgb(185, 0, 0);
+}
+
+.video-wrapped.video-wrapped-vimeo .video-wrapped-play:before {
+	background: #08c;
+}
+
+.video-wrapped.video-wrapped-video .video-wrapped-play:after {
 	content: '';
 	border-style: solid;
-	border-width: 20px 0 20px 30px;
+	border-width: 17px 0 17px 35px;
 	border-color: transparent transparent transparent white;
 	position: absolute;
 	width: 0;
 	height: 0;
-	margin-left: -20px;
+	margin-left: -15px;
 	left: 50%;
-	top: -30px;
-	cursor: pointer;
+	top: -27px;
 }
 
 .video-wrapped .video-wrapped-play .small {
