Fix #6: No more codes below the video.

--- a/video-embed-privacy.css
+++ b/video-embed-privacy.css
@@ -10,6 +10,7 @@
 }
 .video-wrapped-clicked {
 	background: transparent;
+	background-image: none !important;
 }
 
 .video-wrapped .video-wrapped-nojs {
