--- a/video-embed-privacy.css
+++ b/video-embed-privacy.css
@@ -7,7 +7,11 @@
 	cursor: pointer;
 	max-width: 100%;
 	margin: auto;
+        
+        margin-bottom: 30px; 
+        height: 0;
 }
+
 .video-wrapped-clicked {
 	background: transparent;
 	background-image: none !important;
@@ -74,4 +78,12 @@
 
 .video-wrapped .video-wrapped-play .small {
 	font-size: 50%;
+}
+
+.video-wrapped iframe, .video-container object, .video-container embed, .video-container video { 
+        position: absolute; 
+        top: 0; 
+        left: 0; 
+        width: 100%; 
+        height: 100%; 
 }
